--- a/index.html
+++ b/index.html
@@ -1,9 +1,74 @@
+<!DOCTYPE html>
 <html>
-
+<head>
+   <title>HTML Table Reference</title>
+   <link href="style.css" type="text/css" rel="stylesheet">
+</head>
 <body>
-  <h1>Jacke</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+<h1> HTML Table Reference </h1>
+<h2> Table Tags </h2>
+<table>
+  <thead>
+    <tr>
+      <th>Tag</th>
+      <th>Name</th>
+      <th>Description</th>
+     </tr> 
+  </thead>
+  <tbody>
+    <tr>
+      <td><span class='code'>table</span></td>
+      <td>Table</td>
+      <td>The wrapper element for all HTML tables.</td>
+    </tr>
+    <tr>
+      <td><span class='code'>thead</span></td>
+      <td>Table Head</td>
+      <td>The set of rows defining the column headers in a table.</td>
+    </tr>
+    <tr>
+      <td><span class='code'>tbody</span></td>
+      <td>Table Body</td>
+      <td>The set of rows containing actual table data.</td>
+    </tr>
+    <tr>
+      <td><span class='code'>tr</span></td>
+      <td>Table Row</td>
+      <td>The table row container.</td>
+    </tr>
+    <tr>
+      <td><span class='code'>td</span></td>
+      <td>Table Data</td>
+      <td>The table row container.</td>
+    </tr>
+    <tr>
+      <td><span class='code'>tfoot</span></td>
+      <td>Table Foot</td>
+      <td>The set of rows defining the footer in a table.</td>
+    </tr>
+  </tbody>    
+</table> 
+ <h2> Table Attributes </h2>
+ <table>
+  <thead>
+    <tr>
+      <th>Attribute</th>
+      <th>Name</th>
+      <th>Description</th>
+     </tr> 
+  </thead>
+  <tbody>
+    <tr>
+      <td><span class='code'>colspan</span></td>
+      <td>Column Span	</td>
+      <td>Defines how many columns a td element should span.</td>
+    </tr>
+    <tr>
+      <td><span class='code'>rowspan</span></td>
+      <td>Row Span</td>
+      <td>Defines how many rows a td element should span.</td>
+    </tr>
+  </tbody>    
+</table> 
 </body>
-
 </html>
