--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>HTML Table Reference</title>
-   <link href="style.css" type="text/css" rel="stylesheet">
+   <link href="stlye.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <h1> HTML Table Reference </h1>
